// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_help is a command 1`] = `
Object {
  "alias": Array [
    "commands",
  ],
  "description": "Get help with commands",
  "name": "help",
  "run": [Function],
  "usage": "[command]",
}
`;

exports[`_help returns a list of all commands 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        "Here is a list of available commands:",
        "help, add, list, next, pause, ping, play, playing, playlist add, playlist create, playlist list, playlist play, playlist delete, resume, stop, volume",
        "Get more details with \\"_help [command]\\"",
      ],
      Object {
        "split": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`_help returns the details for the add command 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        "**add**: Add a song",
        "*usage*: \`_add <file> [...tags]\`",
        "*examples*: \`_add counting-the-cost.webm dark menacing epic\`",
      ],
      Object {
        "split": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`_help returns the details for the help command 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        "**help**: Get help with commands",
        "*aliases*: commands",
        "*usage*: \`_help [command]\`",
      ],
      Object {
        "split": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`_help returns the details for the pause command 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        "**pause**: Pause the playlist",
      ],
      Object {
        "split": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`_help returns the details for the play command 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        "**play**: Start a playlist",
        "*aliases*: start",
        "*usage*: \`_play <...tags|song> [--volume|-v <volume>]\`",
      ],
      Object {
        "split": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`_help returns the details for the volume command 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        "**volume**: Set the playback volume",
        "*usage*: \`_volume <volume>\`",
      ],
      Object {
        "split": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
